--- a/packages/_meta/tsconfig.json
+++ b/packages/_meta/tsconfig.json
@@ -10,6 +10,9 @@
       "path": "../jupyterlab-font-anonymous-pro"
     },
     {
+      "path": "../jupyterlab-font-atkinson-hyperlegible"
+    },
+    {
       "path": "../jupyterlab-fonts"
     },
     {
