--- a/pyproject.toml
+++ b/pyproject.toml
@@ -95,7 +95,7 @@ all_py_test = [":rglob::tests::*.py"]
 all_robot = [":rglob::atest::*.robot", ":rglob::atest::*.resource"]
 all_scripts = [":glob::scripts::*.py"]
 all_toml = ["::ppt"]
-atest_all_report = ["build/reports/robot/log.html"]
+atest_all_report = ["build/reports/robot/ALL/log.html"]
 atest_dir = ["atest"]
 atest_report = ["${JLF_ROBOT_REPORT}"]
 atest_report_html = ["${JLF_ROBOT_REPORT}/log.html"]
