--- a/packages/jupyterlab-font-fira-code/package.json
+++ b/packages/jupyterlab-font-fira-code/package.json
@@ -49,6 +49,9 @@
       ],
       "dist_pkg_json": [
         "../../src/_d/share/jupyter/labextensions/@deathbeds/jupyterlab-font-fira-code/package.json"
+      ],
+      "webpack_config": [
+        "webpack.config.js"
       ]
     },
     "tasks": {
@@ -60,6 +63,7 @@
             ]
           ],
           "file_dep": [
+            "::webpack_config",
             "package.json",
             "::js-root::tsbuildinfo",
             "::js-root::yarn_history"
