--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "source-map-loader": "^4.0.1",
     "ts-node": "^10.9.1",
     "typescript": "~5.2.2",
+    "webpack-bundle-analyzer": "^4.9.1",
     "yarn-berry-deduplicate": "^6.1.1"
   },
   "doitoml": {
