--- a/packages/jupyterlab-fonts/package.json
+++ b/packages/jupyterlab-fonts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@deathbeds/jupyterlab-fonts",
-  "version": "3.0.0.alpha0",
+  "version": "3.0.0-alpha.1",
   "description": "Interactive Typography and Style for JupyterLab",
   "license": "BSD-3-Clause",
   "author": "Dead Pixels Collective",
@@ -70,7 +70,7 @@
         "."
       ],
       "dist_pkg_json": [
-        "../../src/jupyterlab_fonts/_d/share/jupyter/labextensions/@deathbeds/jupyterlab-fonts/package.json"
+        "../../src/_d/share/jupyter/labextensions/@deathbeds/jupyterlab-fonts/package.json"
       ],
       "prebuild_deps": [
         "schema/fonts.json"
@@ -78,6 +78,9 @@
       "prebuild_targets": [
         "src/_schema.d.ts",
         "lib/_schema.d.ts"
+      ],
+      "webpack_config": [
+        "webpack.config.js"
       ]
     },
     "tasks": {
@@ -104,6 +107,7 @@
             ]
           ],
           "file_dep": [
+            "::webpack_config",
             "package.json",
             "::all_style",
             "::all_ts",
@@ -146,7 +150,15 @@
   "jupyterlab": {
     "extension": "lib/plugin.js",
     "schemaDir": "schema",
-    "outputDir": "../../src/jupyterlab_fonts/_d/share/jupyter/labextensions/@deathbeds/jupyterlab-fonts",
-    "webpackConfig": "./webpack.config.js"
+    "outputDir": "../../src/_d/share/jupyter/labextensions/@deathbeds/jupyterlab-fonts",
+    "webpackConfig": "./webpack.config.js",
+    "sharedPackages": {
+      "jss": {
+        "bundled": true
+      },
+      "jss-preset-default": {
+        "bundled": true
+      }
+    }
   }
 }
