--- a/packages/_meta/package.json
+++ b/packages/_meta/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "name": "@deathbeds/meta-jupyterlab-fonts",
-  "version": "3.0.0-alpha.4",
+  "version": "3.0.0",
   "scripts": {
     "build": "tsc -b --sourceMap",
     "build:cov": "tsc -b --inlineSourceMap",
