--- a/packages/jupyterlab-font-dejavu-sans-mono/package.json
+++ b/packages/jupyterlab-font-dejavu-sans-mono/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@deathbeds/jupyterlab-font-dejavu-sans-mono",
-  "version": "3.0.0-alpha.4",
+  "version": "3.0.0",
   "description": "Dejavu Sans Mono Fonts for JupyterLab",
   "license": "BSD-3-Clause",
   "author": "Dead Pixels Collective",
@@ -25,7 +25,7 @@
   },
   "types": "lib/index.d.ts",
   "dependencies": {
-    "@deathbeds/jupyterlab-fonts": "~3.0.0-alpha.3",
+    "@deathbeds/jupyterlab-fonts": "~3.0.0",
     "@jupyterlab/application": "3 || 4"
   },
   "devDependencies": {
