--- a/packages/jupyterlab-font-fira-code/package.json
+++ b/packages/jupyterlab-font-fira-code/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@deathbeds/jupyterlab-font-fira-code",
-  "version": "3.0.0-alpha.4",
+  "version": "3.0.0",
   "description": "Fira Code Fonts for JupyterLab",
   "license": "BSD-3-Clause",
   "author": "Dead Pixels Collective",
@@ -23,7 +23,7 @@
   },
   "types": "lib/index.d.ts",
   "dependencies": {
-    "@deathbeds/jupyterlab-fonts": "~3.0.0-alpha.3",
+    "@deathbeds/jupyterlab-fonts": "~3.0.0",
     "@jupyterlab/application": "3 || 4",
     "firacode": "^6.2.0"
   },
